<resources>
    <string name="app_name">智能电阻识别</string>

    <!-- 通用 -->
    <string name="countdown_code_send_succeed">验证码已发送，请注意查收</string>
    <string name="two_password_input_error">两次密码输入不一致，请重新输入</string>
    <string name="phone_input_error">手机号输入不正确</string>

    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_found">发现</string>
    <string name="home_nav_message">历史</string>
    <string name="home_nav_me">我的</string>

    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>

    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">邮箱地址仅用于登录和保护账号安全</string>
    <string name="register_login">登录</string>
    <string name="register_phone_hint">输入邮箱地址</string>
    <string name="register_code_hint">输入验证码</string>
    <string name="register_send_code">发送验证码</string>
    <string name="register_password_hint1">设置密码</string>
    <string name="register_password_hint2">再次输入密码</string>

    <!-- 设置 -->
    <string name="setting_title">设置</string>

    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>

    <string name="setting_update">检查更新</string>

    <string name="setting_cache">清空缓存</string>
    <string name="setting_banbenhao">版本号</string>

    <string name="setting_auto">自动登录</string>

    <string name="setting_agreement">账号安全</string>

    <string name="setting_about">援助项目设计组</string>

    <string name="setting_exit">退出登录</string>

    <!-- 忘记密码 -->
    <string name="password_reset">修改密码</string>
    <string name="email_reset">修改邮箱</string>
    <string name="phone_reset">修改手机号</string>
    <string name="password_forget_title">忘记密码</string>
    <string name="password_forget_phone_hint">输入手机号码</string>
    <string name="password_forget_code_hint">输入验证码</string>
    <string name="password_forget_send_code">发送验证码</string>
    <string name="password_forget_commit">下一步</string>

    <!-- 重置密码 -->
    <string name="password_reset_title">设置登录密码</string>
    <string name="password_reset_phone_hint1">设置6-18位登录密码</string>
    <string name="password_reset_phone_hint2">重新输入一次密码</string>
    <string name="password_reset_commit">完成</string>

    <!-- 关于 -->
    <string name="about_title">关于我们</string>
    <string name="about_copyright">Copyright © 2018</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_photo">拍照扫描</string>
    <string name="action_album">相册选择</string>
    <string name="loading">加载中...</string>
    <string name="about_page_open_with">Open with:</string>
    <string name="about_page_browser">Web Browser</string>

    <string name="card_content">常用的小功率电阻的参数（阻值、精度、材质、温度系数等）普遍使用色环编码的办法来标注，这也是国际通用的方法。\n\n在使用色环编码的电阻时，如果对编码不熟悉，或者色环不清楚，或者使用者存在色弱缺陷，那么就会出现识别错误，导致实验不正常。为此，研究一种能够自动识别色环编码电阻各种参数的装置是很有应用价值的。虽然该产品受众群体为特殊人群即工程师，但因为电阻属于电子电气产品中的精密器件，若一旦选错电阻出现差错，就会导致整台机器或项目出现严重错误，而且若此时在进行修改和更换可能就会造成工作量增加的风险，所以为了使这种风险降低可使用容错率低的机器智能判别的方法，即色环编码电阻参数智能识别器。\n\n利用图像识别技术和色环编码规律设计软件，可智能低容错识别电阻参数。</string>
    <string name="share_content">分享一款应用：「纯纯打码」，可能是最好用的打码软件，支持传统马赛克、毛玻璃，以及手指、选区打码，更有创意型高亮打码、LowPoly 风格，轻巧漂亮，打码也能够成为一种赏心悦目，推荐：http://t.cn/RbRjE4u</string>
    <string name="app1">智能电阻识别</string>
    <string name="pure_mosaic">Pure Mosaic</string>
    <string name="about_page_app_links">Android Links</string>

</resources>